--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vcard</title>
+    <link rel="stylesheet" href="Styles/index.css">
 </head>
 <body>
   
@@ -16,7 +17,7 @@
       <figcaption>
   
         <h1 class="name">Viz dev</h1>
-        <h3 class="title">Dev Ops</h3>
+        <h3 class="title">Dev Opsr</h3>
       </figcaption>
     </figure>
     
